# CmdlineExecutor

./: .gitignore  Cargo.toml  README.md  myllama3_2_3b.modelfile
modelfiles/: gemma3_12_b.modelfile  gemma3_27_b.modelfile
ollama_rs_tool_macro/: Cargo.toml
ollama_rs_tool_macro/src/: lib.rs
terminal_executor/: Cargo.toml
terminal_executor/src/: main.rs  tools.rs  utils.rs
terminal_executor/tools/: tools.json
terminal_executor_python/: setup.py
terminal_executor_python/terminal_executor/: agent.py  main.py  state.py  tools.py
terminal_executor_python/terminal_executor_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
