[lib]
proc-macro = true

[package]
name = "ollama_rs_tool_macro"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
ollama-rs = {version="0.2.5", features=["tool-implementations", "macros"]}
