[package]
name = "terminalExecutor"
version = "0.1.0"
edition = "2021"

[dependencies]
ollama-rs = {version="0.2.5", path="../../ollama-rs/ollama-rs", features=["stream", "macros", "tool-implementations"]}
schemars = "0.8.21"
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
ollama_rs_tool_macro = {"path"="../ollama_rs_tool_macro", "version"="0.1.0"}
termimad = "0.31.2"
clap = { version = "4.5.29", features = ["derive"] }
